--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
@@ -11,27 +11,35 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Billing"
         android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".CountdownActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TimerOverlayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OverlayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- HALAMAN INPUT WHATSAPP -->
-        <activity android:name=".WhatsAppActivity" />
-
-        <!-- LAYANAN OVERLAY TIMER -->
-        <service android:name=".TimerOverlayService"
-            android:exported="false"
-            android:enabled="true" />
+        </activity> <!-- HALAMAN INPUT WHATSAPP -->
+        <activity android:name=".WhatsAppActivity" /> <!-- LAYANAN OVERLAY TIMER -->
+        <service
+            android:name=".TimerOverlayService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 
 </manifest>
